enlace del jumbotron mas accesible

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <hr class="my-4">
             <p>Campers de grandes marcas</p>
             <p>Con 2 años de garantía</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Catálogo de campers</a>
           </div>
     </section>
     <div class="container audio d-flex justify-content-center mt-4">
