se ha añadido texto adicional al audio

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Catálogo de campers</a>
           </div>
     </section>
-    <div class="container audio d-flex justify-content-center mt-4">
+    <div class="container audio d-flex justify-content-center align-items-center mt-4">
         <audio src="audio/bg song.mp3" controls autoplay loop></audio>
+        <p>(Reproduce aquí una canción de fondo...)</p>
     </div>
     <section class="container video mt-4">
         <video src="video/video campervan.mp4" controls></video>
